# torchani-amber

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  README  README.md  build-and-install  cmake.sh  environment.yaml  install.sh  run-cmake  untested.Dockerfile
amber_examples/: README.md  large_water.ncrst  large_water.parm7  large_water.rst7  large_water2.ncrst  large_water3.ncrst  quicktest-cuaev.sh  quicktest.sh  run.sh  run_clist.sh  run_min_clist.sh  tripeptide.prmtop  tripeptide_min.ncrst
amber_examples/inputs/: dynamics_cpu_double_ani1x.in  dynamics_cpu_single_ani1x.in  dynamics_cuda_double_ani1x.in  dynamics_cuda_double_nl.in  dynamics_cuda_single_ani1x.in  min.in  new-input.md.in  nl.in  quicktest-cell-cuaev.in  quicktest-cell.in  quicktest-cuaev.in  quicktest.in
amber_examples/reference_outputs/: dynamics_pmemd_cpu.out  dynamics_pmemd_cpu_double.out  dynamics_pmemd_cpu_double_ani1x.out  dynamics_pmemd_cpu_single.out  dynamics_pmemd_cpu_single_ani1x.out  dynamics_pmemd_cuda.out  dynamics_pmemd_cuda_double.out  dynamics_pmemd_cuda_double_ani1x.out  dynamics_pmemd_cuda_single.out  dynamics_pmemd_cuda_single_ani1x.out  dynamics_sander_cpu.out  dynamics_sander_cpu_double.out  dynamics_sander_cpu_double_ani1x.out  dynamics_sander_cpu_single.out  dynamics_sander_cpu_single_ani1x.out  dynamics_sander_cuda.out  dynamics_sander_cuda_double.out  dynamics_sander_cuda_double_ani1x.out  dynamics_sander_cuda_single.out  dynamics_sander_cuda_single_ani1x.out
amber_files/: README.md  configure2  modify_amber_and_link.sh
amber_files/pmemd/: external.F90  external_dat.F90  mdin_ctrl_dat.F90
amber_files/sander/: external.F90  mdread2.F90
amber_tests/: generate_inputs.py  run_sander.py  test_sander.py
amber_tests/fullml-noshake-vac-f32-all_pairs/: input.mdin
amber_tests/fullml-noshake-vac-f32-cell_list/: input.mdin
amber_tests/fullml-noshake-vac-f64-all_pairs/: input.mdin
amber_tests/fullml-noshake-vac-f64-cell_list/: input.mdin
amber_tests/fullml-noshake-wat-f32-cell_list/: input.mdin
amber_tests/fullml-noshake-wat-f64-cell_list/: input.mdin
amber_tests/fullml-shake-vac-f32-all_pairs/: input.mdin
amber_tests/fullml-shake-vac-f32-cell_list/: input.mdin
amber_tests/fullml-shake-vac-f64-all_pairs/: input.mdin
amber_tests/fullml-shake-vac-f64-cell_list/: input.mdin
amber_tests/fullml-shake-wat-f32-cell_list/: input.mdin
amber_tests/fullml-shake-wat-f64-cell_list/: input.mdin
amber_tests/mlmm_mbispol-noshake-vac-f32-all_pairs/: input.mdin
amber_tests/mlmm_mbispol-noshake-vac-f64-all_pairs/: input.mdin
amber_tests/mlmm_mbispol-shake-vac-f32-all_pairs/: input.mdin
amber_tests/mlmm_mbispol-shake-vac-f64-all_pairs/: input.mdin
amber_tests/mlmm_me-noshake-vac-f32-all_pairs/: input.mdin
amber_tests/mlmm_me-noshake-vac-f64-all_pairs/: input.mdin
amber_tests/mlmm_me-shake-vac-f32-all_pairs/: input.mdin
amber_tests/mlmm_me-shake-vac-f64-all_pairs/: input.mdin
benchmark/: ala-8-chain.prmtop  bench  environment.yaml
benchmark/systems/: ala-8-chain-strip.inpcrd  ala-8-chain-strip.prmtop  ala-8-chain.inpcrd
benchmark/templates/: bench.slurm.sh.jinja  hpg.slurm.sh.jinja  mlmm.mdin.jinja
cmake/: Color.cmake  CudaToolkitHelper.cmake  CudnnHelper.cmake  DownloadAndExtractLibtorch.cmake  EnsureLinuxBuild.cmake  InstallTorchani.cmake  JitCompileModels.cmake  LibtorchHelper.cmake  Msg.cmake  OutOfSourceBuild.cmake  PytorchHelper.cmake  SetCudaToolkitDirs.cmake  SetCudaToolkitVars.cmake  SetCudnnDirs.cmake  SetCustomCudnnPaths.cmake  TorchScriptUtils.cmake  TorchaniConfig.cmake.in  detect_pytorch.py
dev-mlmm/: README.md
include/: torchani.h
inputs/ala-dipep-fullml-aimnet/: input.mdin  system.inpcrd
inputs/ala-dipep-fullml-nutmeg/: input.mdin
inputs/ala-dipep-mlmm-aimnet-ee/: input.mdin
inputs/ala-dipep-mlmm-aimnet-me/: input.mdin  system.prmtop
inputs/ala-dipep-mlmm-nutmeg-me/: input.mdin
install/: README.md  inquire_cuda.py  python.sh
jit/: README.md  ace-ala-nme.charges  aimnet2_wrapper.py  ala-dipep-bulk.charges  jit.py  make_bulk.py  make_nutmeg_features.py  nb.py  nutmeg_wrapper.py  water.charges
mlmm/: README.md
mlmm-dev/: README.md
src/: build_tensors.cpp  build_tensors.h  config.h  electro.cpp  electro.h  torchani.cpp
src-fortran/: torchani-amber.F90  torchani-interface-plan.F90  torchani.F90
templates/: input.md.in.jinja  input.mdin.jinja
test/: CMakeLists.txt  README.md  generate_test_values.py  main.cpp  test_values_cpu_mbis.txt  test_values_cuda_2x.txt  test_values_cuda_mbis.txt  testcase_energy_force_cpu.cpp  testcase_energy_force_cpu_mbis.cpp  testcase_energy_force_cuda.cpp  testcase_energy_force_cuda_2x.cpp
tests/: clean.py  generate_test_values.py  system.inpcrd  system.prmtop  test_amber_integration.py  test_sander.py  test_values_cpu.txt  test_values_cpu_1ccx.txt  test_values_cpu_1ccx_ensemble.txt  test_values_cpu_1x.txt  test_values_cpu_1x_ensemble.txt  test_values_cpu_2x.txt  test_values_cpu_2x_ensemble.txt  test_values_cpu_dr.txt  test_values_cpu_dr_ensemble.txt  test_values_cpu_mbis.txt  test_values_cpu_mbis_ensemble.txt  test_values_cuda_1ccx.txt  test_values_cuda_1ccx_ensemble.txt  test_values_cuda_1x.txt  test_values_cuda_1x_ensemble.txt  test_values_cuda_2x.txt  test_values_cuda_2x_ensemble.txt  test_values_cuda_dr.txt  test_values_cuda_dr_ensemble.txt  test_values_cuda_mbis.txt  test_values_cuda_mbis_ensemble.txt  tests.cpp
tests/expect/: FullML_noshake_vac_f32_cuda_cuaev_allpairs.system.traj  FullML_noshake_vacuum_f64_cuda_cuaev.system.mdcrd  FullML_noshake_wat_f32_celllist.system.traj  FullML_noshake_wat_f64_cuda_cuaev_celllist.system.traj  FullML_noshake_water_f32_cuda.system.mdcrd  FullML_shake_vac_f32_cuda_cuaev_celllist.system.traj  FullML_shake_water_f64_cuda.system.mdcrd  MLMM_mbispol_noshake_vac_f32_allpairs.qm_region.xyz  MLMM_mbispol_noshake_vac_f32_cuda_allpairs.qm_region.xyz  MLMM_mbispol_noshake_vacuum_f32_cpu.qm_region.xyz  MLMM_mbispol_noshake_vacuum_f32_cpu.system.mdcrd  MLMM_mbispol_noshake_vacuum_f32_cuda.qm_region.xyz  (+49 more)
(+53 files in other folders)
